# 2026-03-27-deep-agents-hackathon

./: .gitignore  CHANGES.md  IMPLEMENTATION_SUMMARY.md  README.md
.kiro/specs/pfmea-dashboard-customization/: .config.kiro  design.md  requirements.md  tasks.md
agent/: .env.example  .gitignore  README.md  alembic.ini  app.py  langgraph.json  main.py  pyproject.toml
agent/.langgraph_api/: .langgraph_ops.pckl
agent/alembic/: env.py
agent/alembic/versions/: 8a3362e9bb4c_initial_schema.py
agent/data/: hazard_harm_severity.csv  linac_alignment_mpi.md  p1_p2_risk_matrix.csv
agent/src/: api.py  api_models.py  database.py  db.py  embeddings.py  graph.py  models.py  prompts.py  repository.py  schema.py  schemas.py  utils.py
agent/src/data/: risk_management.md
agent/src/tools/: airbyte_lookup.py  hazard_lookup.py  probability_of_harm.py  vector_search.py
agent/tests/: test_airbyte_lookup.py  test_api.py
docs/: agent.md  api.md  architecture.md  data-integration.md  database.md  frontend.md  stuffhere.md
frontend/: package-lock.json
frontend/hackathon/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/hackathon/src/: App.tsx  main.tsx
frontend/hackathon/src/components/: app-sidebar.tsx  file-upload.README.md  file-upload.tsx  filter-bar.README.md  filter-bar.example.tsx  filter-bar.test.tsx  filter-bar.tsx  process-type-chart.README.md  process-type-chart.example.tsx  process-type-chart.integration.test.tsx  process-type-chart.test.tsx  process-type-chart.tsx  risk-distribution-chart.README.md  risk-distribution-chart.example.tsx  (+8 more)
(+6 files in other folders)
