[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "langchain>=1.2.13",
  "langchain-openai>=1.1.12",
  "langgraph-cli[inmem]>=0.4.19",
  "pandas>=3.0.1",
  "pydantic>=2.12.5",
  "pyright>=1.1.408",
  "python-docx>=1.2.0",
  "python-dotenv>=1.2.2",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
